--- a/.github/workflows/export-static-site.yaml
+++ b/.github/workflows/export-static-site.yaml
@@ -2,7 +2,7 @@ name: Export to Invited Remote
 
 on:
   push:
-    branches: [main]  # Adjust if you use a different source branch
+    branches: [main]
 
 jobs:
   export:
@@ -21,29 +21,27 @@ jobs:
           distribution: 'temurin'
 
       - name: Grant permission to Gradle
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
 
-      - name: Build and Export site
+      - name: Build and Export Kobweb site
         run: ./gradlew kobwebExport
 
-      - name: Add invited remote and push export branch
-        env:
-          INVITED_REPO: https://<YOUR_GITHUB_USERNAME>:${{ secrets.INVITED_TOKEN }}@github.com/tamim05/optimumtech.git
+      - name: Copy Exported Site to temp folder
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          
-          mkdir export-temp
-          cp -r .kobweb/site/* export-temp/
-          
-          git init
-          git remote add invited "$INVITED_REPO"
-          git checkout -b export
-          
-          rm -rf *
-          cp -r export-temp/* .
-          rm -rf export-temp
-          
+          mkdir export
+          cp -r site/.kobweb/site/* export/
+
+      - name: Create orphan branch for static files
+        run: |
+          git checkout --orphan release-temp
+          git rm -rf .
+          cp -r export/* .
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
           git add .
-          git commit -m "Update exported site"
-          git push invited export --force
+          git commit -m "Export Kobweb static site"
+
+      - name: Push to 'release' branch on 'invited' remote
+        run: |
+          git remote add invited https://x-access-token:${{ secrets.INVITED_PAT }}@github.com/<your-org-or-username>/<repo-name>.git
+          git push -f invited HEAD:release
