--- a/.github/workflows/export-static-site.yaml
+++ b/.github/workflows/export-static-site.yaml
@@ -8,6 +8,9 @@ jobs:
   export:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write  # Needed to push to the repo
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,6 +32,9 @@ jobs:
           git add .
           git commit -m "Deploy static site from main"
 
-      - name: Push to release branch
+      - name: Push to release branch using GITHUB_TOKEN
+        env:
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
           git push -f origin HEAD:release
