pages added with empty text.

--- a/.github/workflows/export-static-site.yaml
+++ b/.github/workflows/export-static-site.yaml
@@ -27,6 +27,7 @@ jobs:
           git checkout --orphan release-temp
           git rm -rf .
           cp -r export/* .
+          git rm -rf export
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add .
