--- a/.github/workflows/build_and_export_site_to_release_branch.yml
+++ b/.github/workflows/build_and_export_site_to_release_branch.yml
@@ -5,6 +5,12 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+# Add permissions for GITHUB_TOKEN
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   export_and_upload:
     runs-on: ubuntu-latest
@@ -17,6 +23,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Need full history for branch operations
+
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -30,10 +39,10 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
-#      # C
-#      - name: Query Browser Cache ID
-#        id: browser-cache-id
-#        run: echo "value=$(./gradlew -q :site:kobwebBrowserCacheId)" >> $GITHUB_OUTPUT
+      #      # C
+      #      - name: Query Browser Cache ID
+      #        id: browser-cache-id
+      #        run: echo "value=$(./gradlew -q :site:kobwebBrowserCacheId)" >> $GITHUB_OUTPUT
 
       # Also C
       - name: Cache Browser Dependencies
@@ -111,8 +120,24 @@ jobs:
 
       # Push to release branch using GITHUB_TOKEN
       - name: Push to release branch using GITHUB_TOKEN
-        env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
+          git remote set-url origin https://github-actions:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git push -f origin HEAD:release
+
+      #      # D
+      #      - name: Upload site
+      #        uses: actions/upload-artifact@v4
+      #        with:
+      #          name: site
+      #          path: site/.kobweb/site/
+      #          if-no-files-found: error
+      #          retention-days: 1
+
+      # Upload artifacts as backup
+      - name: Upload site artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: kobweb-site-${{ github.sha }}
+          path: site/.kobweb/site/
+          if-no-files-found: error
+          retention-days: 1
